--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@angular/service-worker": "~12.1.1",
     "@ionic/angular": "^5.5.2",
     "ngx-cookie-service": "^11.0.2",
     "ngx-device-detector": "^2.1.1",
